[package]
name = "pre-sale-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pre_sale_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { language = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
chainlink_solana = "1.0.0"
rust_decimal = "1.28.1"
